# fifa-world-cup-model

./: .gitignore  GET-DATASETS.md  INITIAL-PLAN.md  Makefile  README.md  REPORT.md  REQUERIMENT.md  RUBRIC.md  RUN.md  SETUP.md  WEBS.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
data/processed/: ablation_results.csv  benchmark_market.csv  features.csv  geo_coords_cache.json  model_evaluation.csv  sensitivity_injuries.csv  simulation_ensemble.csv  simulation_results.csv  team_features.csv  tournament_progression.csv  tune_elo_results.csv  wc2022_validation.csv
data/raw/: international_results.csv  market_odds_2026.csv  squad_values.csv  statsbomb_matches.csv  wc2026_bracket.csv  wc2026_fixture.csv  wc_matches_1974_2022.csv
docs/.vitepress/: config.mjs
notebooks/: 01_eda.ipynb
reports/: analisis_critico.md  plan_correcciones.md
reports/paper/: .gitignore  README.md  paper.aux  paper.bbl  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  references.bib
repository/: Makefile  README.md  conftest.py  requirements.txt
repository/notebooks/: 01_eda.ipynb
repository/tests/: test_data_loader.py  test_features.py  test_models.py  test_simulation.py
src/analysis/: ablation.py  benchmark.py  compare_runs.py  sensitivity.py  tune_elo.py
src/data/: data_loader.py
tests/: test_compare_runs.py  test_data_loader.py  test_derived_stats.py  test_features.py  test_models.py  test_simulation.py
(+51 files in other folders)
