[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc2026-model"
version = "0.1.0"
description = "FIFA World Cup 2026 prediction model - ML + Monte Carlo"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "geopy>=2.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "shap>=0.45",
    "joblib>=1.4",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "streamlit>=1.35",
    "statsbombpy>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
